fixed timeline on small screens:

--- a/css/style.css
+++ b/css/style.css
@@ -790,19 +790,22 @@ nav .closebtn:hover{
 @media screen and (max-width: 1024px) {
 /* Place the timelime to the left */
   .timeline::after {
-    left: 31px;
+/*    left: 31px;*/
+      left: 16px;
   }
 /* Full-width containers */
   .container {
     width: 100%;
-    padding-left: 35px;
+/*    padding-left: 35px;*/
+      padding-left: 20px;
     padding-right: 25px;
     margin-bottom: 100px;
   }
 
 /* Make sure that all arrows are pointing leftwards */
   .container::before {
-    left: 65px;
+/*    left: 65px;*/
+      left: 50px;
     border: medium solid #49738e;
     border-width: 10px 10px 10px 0;
     border-color: transparent #49738e transparent transparent;
@@ -810,23 +813,18 @@ nav .closebtn:hover{
 
 /* Make sure all circles are at the same spot */
   .left::after, .right::after {
-    left: 15px;
+/*    left: 15px;*/
+    left: 0px;
   }
 
 /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
   }
-    
-/*
-    .timeline-block{
-        margin-right: 20%;
-    }
-*/
+
     .left .timeline-block{
         margin-left: 40px;
         margin-right: 8%;
-/*        margin-right: 0px;*/
     }
     .right .timeline-block{
         margin-left: 40px;
